Fix too large header text

--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -295,6 +295,8 @@
   font-family: $custom-font-family
 
 .oc-heading 
+  float: left
+  width: 207px
 
 .oc-logo svg
   height: 50px
